tests/paczka1/small_fuzzy/32833827.err
Error in line 4: HVDuzzIkrBI S549 23,1
Error in line 5: HVDuzzIkrBI A558 39,8
